# Stream-Deck-Middleware

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  com.rs  commands.rs  config.rs  diagnostics.rs  lib.rs  main.rs  monitor.rs  protocol.rs  serial.rs  spotify.rs  window.rs
src-tauri/src/action/: actions.rs  manager.rs  mod.rs  tracker.rs
src-tauri/src/modules/: PressKeyAction.rs  app_volume_action.rs  foreground_volume.rs  macro_action.rs  master_volume.rs  mod.rs  spotify_like.rs  spotify_volume.rs  toggle_app_audio.rs  toggle_app_media_action.rs  toggle_foreground_audio.rs
src/components/: AppUpdater.vue
src/components/config/: ActionSidebar.vue  ConfigPanel.vue  HardwareBoard.vue  LedConfigSection.vue  OledDisplay.vue
src/components/config/ConfigPanel/: ActionBindings.vue  OledSettings.vue
src/components/config/ConfigPanel/ActionSettings/: ActionSettingsAudio.vue  ActionSettingsKey.vue  ActionSettingsMacro.vue  ActionSettingsMedia.vue  ActionSettingsProcess.vue  ActionSettingsVolume.vue
src/components/layout/: TopBar.vue
src/composables/: useLedAnimation.ts
src/router/: index.ts
src/services/: streamdeckCommands.ts
src/stores/: streamdeck.ts
src/views/: ConfigView.vue  DevToolsView.vue  SettingsView.vue  TestView.vue
